--- a/shard.yml
+++ b/shard.yml
@@ -8,8 +8,10 @@ crystal: 0.30.0
 
 dependencies:
   optarg:
-    github: drujensen/optarg
-    version: ~> 0.7.0
+    github: bcardiff/optarg
+    branch: bcardiff/use-fork
+    # github: drujensen/optarg
+    # version: ~> 0.7.0
   string_inflection:
     github: mosop/string_inflection
     version: ~> 0.2.1
